initial site files

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,15 +36,18 @@
         <section id="portfolio">
             <h2>Portfolio</h2>
             <div class="portfolio">
+                <div class="hangman">
             <img src="https://icdn2.digitaltrends.com/image/steve-jobs-holding-ipad-sternly-650x335.jpg?ver=1" alt="hangman">
 
             <p> Hangman</p>
-
+        </div>
             <img src="https://heavyeditorial.files.wordpress.com/2014/12/fable-mass-effect-3.jpg?quality=65&strip=all" alt="rpg game">
 
+                <div class="game">
             <p> RPC Game </p>
 
             <img src="https://www.apple.com/v/airpods/d/images/overview/og.png?201710171404" alt="trivia">
+                </div>
     
             <p> Trivia Game </p>
 
